# tachyon-server

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  aerich.ini  go.mod  go.sum  main.go  pyproject.toml  setup.cfg  vercel.json
.github/workflows/: deploy.yml  tests.yml
db/: client.go
deploy/: docker-compose.local.yml  local.dockerfile
notes/: note.go  notes_dao.go
tachyon/: __init__.py  __main__.py  conftest.py  main.py  settings.py
tachyon/db/: config.py
tachyon/db/dao/: base_dao.py  note_dao.py
tachyon/db/migrations/models/: 0_20211016203823_init.sql
tachyon/db/models/: __init__.py  note_model.py
tachyon/db/utils/: __init__.py  cbor.py
tachyon/exceptions/: __init__.py  base.py
tachyon/exceptions/dao/: __init__.py  note.py
tachyon/services/: __init__.py
tachyon/services/ciphers/: __init__.py  chacha20poly1305.py
tachyon/tests/: __init__.py
tachyon/tests/api/: __init__.py  test_note.py
tachyon/web/: __init__.py  application.py  exceptions.py  lifetime.py
tachyon/web/api/: __init__.py  router.py
tachyon/web/api/monitoring/: __init__.py  schemas.py  views.py
tachyon/web/api/note/: __init__.py  schema.py  schemas.py  views.py
tachyon/web/api/root/: __init__.py  schemas.py  views.py
tachyon/web/dependencies/: __init__.py  redis_cache.py
tachyon/web/utils/: __init__.py  sentry.py
